<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".DatabaseSettingsActivity"
    tools:ignore="HardcodedText">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_all_rounded"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/background_top_rounded"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:gravity="center"
                android:text="@string/activity_settings_lblMainHeader"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutHeader"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnResetDatabase"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:backgroundTint="@color/dark_red"
                        android:text="@string/activity_settings_btnResetDatabase"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnDatabaseExport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_below="@id/btnResetDatabase"
                        android:backgroundTint="@color/dark_red"
                        android:text="@string/activity_settings_btnDatabaseExport"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnDatabaseImport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        android:layout_below="@id/btnDatabaseExport"
                        android:backgroundTint="@color/dark_red"
                        android:text="@string/activity_settings_btnDatabaseImport"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>