<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="5dp"
    android:background="@color/gray"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    app:layout_anchorGravity="center_vertical"
    app:barrierMargin="@dimen/material_emphasis_high_type"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/layoutDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@null"
            android:background="@drawable/border"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/textBookID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textBookName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:lines="2"
            android:maxLines="2"
            android:layout_toEndOf="@id/imageView"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/textBookAuthor"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookName"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textBookPublisher"
            android:layout_width="250dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookAuthor"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textBookISBN"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookPublisher"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:text="@string/book_list_item_textBookISBN" />

        <TextView
            android:id="@+id/txtBookISBN"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/textBookPublisher"
            android:layout_toEndOf="@id/textBookISBN"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textBookLanguage"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookISBN"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:text="@string/book_list_item_textBookLanguage" />

        <TextView
            android:id="@+id/txtBookLanguage"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/textBookISBN"
            android:layout_toEndOf="@id/textBookLanguage"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textBookType"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookLanguage"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:text="@string/book_list_item_textBookType" />

        <TextView
            android:id="@+id/txtBookType"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/textBookLanguage"
            android:layout_toEndOf="@id/textBookType"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif" />

        <TextView
            android:id="@+id/textBookRead"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookType"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:text="@string/book_list_item_textBookRead" />

        <CheckBox
            android:id="@+id/cboxBookRead"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/textBookType"
            android:layout_toEndOf="@id/textBookRead"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:buttonTint="@color/gray"
            android:clickable="false"/>

        <TextView
            android:id="@+id/textBookInLibrary"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_below="@id/textBookRead"
            android:layout_toEndOf="@id/imageView"
            android:layout_marginStart="5dp"
            android:textAlignment="textStart"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:text="@string/book_list_item_textBookInLibrary" />

        <CheckBox
            android:id="@+id/cboxBookInLibray"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/cboxBookRead"
            android:layout_toEndOf="@id/textBookInLibrary"
            android:buttonTint="@color/gray"
            android:clickable="false"
            android:fontFamily="sans-serif"
            android:textAlignment="textStart"
            android:textColor="@color/gray" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>