<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".BookType.BookTypeSettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/background_all_rounded"
        android:paddingBottom="10dp">

        <RelativeLayout
            android:id="@+id/layoutMain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblMainHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_top_rounded"
                android:paddingTop="10dp"
                android:text="@string/activity_book_type_settings_lblMainHeader"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layoutSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutMain"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/border">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinnerBookType"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:outlineAmbientShadowColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutBookTypeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutSpinner"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/lblBookTypeID"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:labelFor="@id/txtBookTypeID"
                android:text="@string/activity_book_type_settings_lblBookTypeID"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/txtBookTypeID"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/lblBookTypeID"
                android:autofillHints=""
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                tools:ignore="VisualLintTextFieldSize" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutBookType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layoutBookTypeID"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/lblBookType"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:text="@string/activity_book_type_settings_lblBookType"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/txtBookType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/lblBookType"
                android:autofillHints=""
                android:inputType="text"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textAlignment="textStart"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/layoutBookType"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:contentDescription="@null"
                android:src="@drawable/icon_update"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@id/btnUpdate"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:contentDescription="@null"
                android:src="@drawable/icon_insert"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@id/btnInsert"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:contentDescription="@null"
                android:src="@drawable/icon_delete"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="20dp"
                android:layout_toEndOf="@id/btnDelete"
                android:backgroundTint="@color/black"
                android:clickable="true"
                android:contentDescription="@null"
                android:src="@drawable/icon_clear"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:tint="@color/white"
                tools:ignore="SpeakableTextPresentCheck" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>